apply plugin: 'com.android.application'
apply plugin: 'kotlin-android'
apply plugin: 'org.greenrobot.greendao'
apply plugin: 'kotlin-android-extensions'
apply plugin: 'com.jakewharton.butterknife'


// gradle BuildVariants
//Build Variants = Product Flavor + Build Type
android {
    namespace "com.openapi.ks.chatfree"
    compileSdk 34
//    buildTools "29.0.2"
    ndkVersion "23.1.7779620"
    defaultConfig {
        applicationId "com.openapi.ks.chatfree"
        minSdk 28
        targetSdk 33
        versionCode 1001000017
        versionName "1.1.1.7"
        // Enabling multidex support.
        multiDexEnabled true
        flavorDimensions "versionCode"
        renderscriptTargetApi 18
        renderscriptSupportModeEnabled true

    }
    tasks.withType(JavaCompile).configureEach{
        options.fork = true
        options.forkOptions.jvmArgs +=[
                '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
                '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED']
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_17
        targetCompatibility JavaVersion.VERSION_17
    }
    kotlinOptions {
        jvmTarget = "17"
    }
    buildFeatures {
        viewBinding true
    }
    dexOptions {
//        incremental true
        preDexLibraries true
        javaMaxHeapSize "4g"
    }
    lintOptions {
        disable 'InvalidPackage'
        checkReleaseBuilds false
        abortOnError false
    }


    packagingOptions {
        exclude 'META-INF/LICENSE.txt'
        exclude 'META-INF/maven/com.squareup.okhttp/okhttp/pom.xml'
        exclude 'META-INF/maven/com.squareup.okhttp/okhttp/pom.properties'
        exclude 'META-INF/maven/com.squareup.okio/okio/pom.xml'
        exclude 'META-INF/maven/com.squareup.okio/okio/pom.properties'
        exclude 'META-INF/services/javax.annotation.processing.Processor'
    }
    sourceSets.main {
        jni.srcDirs = [] // disables the default ndk-build call (with on-the-fly Android.mk files)
//        jniLibs.srcDir 'src/main/jniLibs'
        jniLibs.srcDirs = ['libs']
    }
    signingConfigs {
        config {
            keyAlias 'themass'
            keyPassword 'themass'
            storeFile file('/Users/liguoqing/soft/myapp/key')
            storePassword 'themass'
        }
    }
    buildTypes {
        debug {
            minifyEnabled false
            debuggable true
            zipAlignEnabled false // Zipalign优化
            shrinkResources false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            signingConfig signingConfigs.config
        }
        release {
            minifyEnabled true
            debuggable false
            zipAlignEnabled true // Zipalign优化
            shrinkResources true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
            signingConfig signingConfigs.config
        }
    }
    productFlavors {
        chat {
            manifestPlaceholders = [CHANNEL_VALUE: "GOOGLEMARKET", AD_CHANNEL_VALUE: "GOOGLEMARKET"]
        }
    }
//    tasks.named('compileDebugKotlin') {
//        dependsOn(':app:greendao')
//    }
}
greendao {
    schemaVersion 6
//    daoPackage 'com.ping.greendao.gen'
//    targetGenDir 'src/main/java'
}
configurations {
    implementation.exclude module: 'gson' //Remove duplicate dependencies： gson
}
dependencies {

    implementation fileTree(dir: 'libs', include: ['*.aar'])
    implementation fileTree(dir: 'libs', include: ['*.jar'])

    //不能升级，会影响kotlin版本
    implementation "androidx.appcompat:appcompat:1.6.1"
    implementation "androidx.legacy:legacy-support-v13:1.0.0"
    implementation "androidx.legacy:legacy-support-v4:1.0.0"
    implementation "androidx.palette:palette:1.0.0"
    implementation "androidx.recyclerview:recyclerview"
    implementation "androidx.cardview:cardview"
    //material 版本不能动，会影响kotlin版本
    implementation 'com.google.android.material:material:1.4.0'
    annotationProcessor 'androidx.annotation:annotation:1.8.0'
    implementation "androidx.percentlayout:percentlayout:1.0.0"
    implementation 'androidx.multidex:multidex:2.0.1'
//    implementation 'androidx.multidex:multidex:2.0.1'
    //不能升级，影响kotlin版本
    implementation 'com.google.android.gms:play-services-ads:22.0.0'
    implementation 'jp.wasabeef:glide-transformations:4.3.0'

    implementation 'com.github.bumptech.glide:glide:4.15.1'
    annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'
    implementation 'com.github.bumptech.glide:okhttp3-integration:4.15.1'
    implementation 'jp.wasabeef:glide-transformations:4.3.0'

    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
    implementation 'com.squareup.okhttp3:okhttp:3.9.0'


    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'
    implementation 'com.jakewharton:butterknife:10.2.3'
    implementation 'com.jakewharton:disklrucache:2.0.2'
//    implementation 'com.github.JakeWharton:ViewPagerIndicator:2.4.1'

    implementation 'com.github.chrisbanes:PhotoView:2.3.0'
    implementation 'com.github.lawloretienne:imagegallery:0.1.0'
    implementation 'com.romainpiel.shimmer:library:1.4.0@aar'
    implementation 'com.sothree.slidinguppanel:library:3.3.1'

    implementation 'jp.co.cyberagent.android.gpuimage:gpuimage-library:1.4.1'
    implementation 'org.greenrobot:eventbus:3.0.0'
    implementation 'org.greenrobot:greendao:3.3.0'

    implementation 'com.nightonke:boommenu:2.1.1'


    implementation 'cn.jzvd:jiaozivideoplayer:7.7.0'
    //和 gsy 冲突了，不能升级版本，不兼容
    implementation 'com.google.android.exoplayer:exoplayer:2.12.1'

    implementation 'io.reactivex:rxjava:1.1.9'
    implementation 'io.reactivex:rxandroid:1.2.1'

    implementation 'com.github.CarGuo.GSYVideoPlayer:GSYVideoPlayer:v8.4.0-release-jitpack'
    //是否需要AliPlayer模式
//    implementation 'com.github.CarGuo.GSYVideoPlayer:GSYVideoPlayer-aliplay:v8.4.0-release-jitpack'

    // 对话框，chat
    implementation 'tz.co.hosannahighertech:messagekit:1.0.0apha4'
    implementation 'de.hdodenhof:circleimageview:3.1.0'
    implementation 'com.github.siyamed:android-shape-imageview:0.9.3'

    //Utils
//    implementation "me.relex:circleindicator:2.1.4"

    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
    implementation 'androidx.core:core-ktx:1.0.2'

    //工具集
    //Gson
    implementation 'com.google.code.gson:gson:2.10.1'
// 输入框，语音+图片
    implementation 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.30'
    // PictureSelector basic (Necessary)
    implementation 'io.github.lucksiege:pictureselector:v3.11.2'
    // image compress library (Not necessary)
    implementation 'io.github.lucksiege:compress:v3.11.2'
    // uCrop library (Not necessary)
    implementation 'io.github.lucksiege:ucrop:v3.11.2'
    // simple camerax library (Not necessary)
    implementation 'io.github.lucksiege:camerax:v3.11.2'
//asr 识别
//    implementation group: 'com.alphacephei', name: 'vosk-android', version: '0.3.32+'
//    implementation 'com.alphacephei:vosk-android:0.3.47@aar'
//    implementation 'net.java.dev.jna:jna:5.13.0@aar'
//asr bytedance
    implementation 'com.bytedance.speechengine:speechengine_tob:0.0.3'
    implementation 'pub.devrel:easypermissions:3.0.0'

}
